<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:background="@color/schwarz"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tut0_1st"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tut0_text1" />


    <TextView
        android:id="@+id/tut0_2nd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tut0_text2" />

    <Button
        android:id="@+id/button_ok"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/buttons_hm"
        android:text="@string/tut0_ok"
        android:textColor="@color/white" />



</RelativeLayout>